tests/rosetta/out/C/call-an-object-method-3.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>

typedef struct Box Box;

typedef struct Box {
  char *Contents;
  int secret;
} Box;
typedef struct {
  int len;
  box_t *data;
} box_list_t;
box_list_t create_box_list(int len) {
  box_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(box_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
int Box_TellSecret(Box *self) { return self->secret; }

box_t New() {
  box_t b = (Box){.contents = "rabbit", .secret = 1};
  return b;
}

int main() {
  box_t box = New();
  Box_TellSecret(&box);
  return 0;
}
